syntax = "proto3";

option go_package = "github.com/go-chord/pb";
package pb;

/*
protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    rpc/chord.proto
*/

service Chord {
    rpc GetHashFuncCheckSum(Empty) returns (HashFuncResponse);
}

message Empty {}

message HashFuncResponse {
    string HashVal = 1;
}
